2010-04-07	Joel Sherrill <joel.sherrill@oarcorp.com>

	* score/src/wkspace.c: Remove duplicate include.

2010-04-07	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libmisc/monitor/mon-monitor.c, libmisc/monitor/monitor.h: Add const
	to fix warning. Spacing.

2010-04-07	Joel Sherrill <joel.sherrill@oarcorp.com>

	* score/include/rtems/system.h: Fix warnings about TRUE/FALSE not
	defined on ARM target. This file need to be clean from .S files.

2010-04-05	Thomas Znidar <t.znidar@embed-it.com>

	* libmisc/monitor/mon-monitor.c, libmisc/monitor/monitor.h: Add reset
	command.

2010-04-04	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libnetworking/lib/rtems_bspnet_ntp.c: #include <unistd.h>.

2010-04-03	Ralf Corsépius <ralf.corsepius@rtems.org>

	* posix/include/sched.h: Remove.
	* posix/Makefile.am: Remove include/sched.h.

2010-04-03	Joel Sherrill <joel.sherrill@oarcorp.org>

	* posix/src/psxtransschedparam.c, posix/src/pthread.c,
	posix/src/pthreadcreate.c: Reflect POSIX sched_parm changes.

2010-04-03	Ralf Corsépius <ralf.corsepius@rtems.org>

	* shttpd/auth.c, shttpd/config.c, shttpd/io_cgi.c,
	shttpd/io_file.c, shttpd/io_socket.c, shttpd/shttpd.c:
	#include <unistd.h>.

2010-04-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libnetworking/sys/select.h: #include <sys/time.h>.

2010-04-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libcsupport/src/isatty_r.c, libcsupport/src/malloc_sbrk_helpers.c:
	#include <unistd.h>.
	* posix/src/sched_rr_get_interval.c: #include <unistd.h>.

2010-03-30	Chris Johns <chrisj@rtems.org>

	* libfs/src/dosfs/msdos_misc.c: Fix PR1491.
	
2010-03-28	Joel Sherrill <joel.sherrill@oarcorp.com>

	* score/src/isrthreaddispatch.c: Add include of config.h

2010-03-28	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libmisc/stringto/stringto_template.h: Reorder includes.
	* libmisc/stringto/stringtodouble.c,
	libmisc/stringto/stringtofloat.c,
	libmisc/stringto/stringtoint.c,
	libmisc/stringto/stringtolong.c,
	libmisc/stringto/stringtolonglong.c, 