@@ -1,5 +1,9 @@
 /**
- * @file rtems/score/types.h
+ * @file
+ *
+ * @ingroup ScoreCPU
+ *
+ * @brief ARM architecture types API.
  */
 
 /*
@@ -29,6 +33,12 @@
 extern "C" {
 #endif
 
+/**
+ * @addtogroup ScoreCPU
+ *
+ * @{
+ */
+
 /*
  *  This section defines the basic types for this processor.
  */
@@ -40,6 +50,8 @@ typedef bool		boolean;            /* Boolean value   */
 typedef float           single_precision;   /* single precision float */
 typedef double          double_precision;   /* double precision float */
 #endif
+
+/** @} */
 
 #ifdef __cplusplus
 }
