@@ -1,3 +1,10 @@
+2010-04-08	Sebastian Huber <sebastian.huber@embedded-brains.de>
+
+	* arm_exc_abort.S, arm_exc_handler_high.c, arm_exc_handler_low.S,
+	arm_exc_interrupt.S, cpu.c, cpu_asm.S, rtems/asm.h, rtems/score/arm.h,
+	rtems/score/cpu.h, rtems/score/cpu_asm.h, rtems/score/types.h:
+	Documentation.
+
 2010-04-07	Joel Sherrill <joel.sherrill@oarcorp.com>
 
 	* arm_exc_abort.S: Fix warnings about TRUE/FALSE not defined.
